...
) {
    if (BottomBarDestination.entries.any { it.direction == currentDestination }) {
        NavigationBar(
            containerColor = MaterialTheme.colorScheme.background,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("bottomNavigation")
        ) {
            BottomBarDestination.entries.forEach { destination ->
                val isSelected = currentDestination == destination.direction

                NavigationBarItem(
                    selected = isSelected,
...
    }
}

private fun getTestTagForDestination(destination: BottomBarDestination): String {
    return when (destination) {
        BottomBarDestination.SEARCH -> "searchTab"
        BottomBarDestination.RATING -> "ratingTab"
        BottomBarDestination.ADD_CAT -> "addCatTab"
        BottomBarDestination.FAVOURITES -> "favouriteTab"
        BottomBarDestination.SETTINGS -> "settingsTab"
    }
}

