...
        ) {
            Row {
                Text(
                    text = "${cat.name}, ",
                    style = MaterialTheme.typography.titleLarge,
                    color = MaterialTheme.colorScheme.onSurface,
                    modifier = Modifier.testTag("catName")
                )
                CatGenderIcon(gender = cat.gender)
            }
            IconButton(
                onClick = {
                    onFavoriteClick()
...
                    modifier = Modifier
                        .padding(MaterialTheme.spacing.small)
                )
                Button(
                    onClick = onEditButtonClicked,
                    shape = MaterialTheme.shapes.medium,
                    modifier = Modifier.testTag("editButton")
                ) {
                    Text(
                        text = stringResource(R.string.details_change_description_button),
                        style = MaterialTheme.typography.titleLarge
                    )
                }
...
