...
    onCatClick: (Cat) -> Unit
) {
    PawBox {
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("ratingScreen")
        ) {
            RatingTabs(
                selectedTab = selectedTab,
                onTabSelect = onTabSelect
            )

...
